# CXXfoil

./: .gitattributes  .travis.yml  CMakeLists.txt  LICENSE  README.md  cxxfoil.h
doxygen/: config
doxygen/html/: annotated.html  classConvergenceException-members.html  classConvergenceException.html  classConvergenceException__coll__graph.md5  classConvergenceException__inherit__graph.map  classConvergenceException__inherit__graph.md5  classXfoilInterface-members.html  classXfoilInterface.html  classes.html  classpolar-members.html  classpolar.html  classpolar__coll__graph.map  classpolar__coll__graph.md5  classpolar__inherit__graph.md5  dir_000002_000000.html  dir_000006_000005.html  dir_000007_000005.html  dir_000011_000010.html  dir_2676cc314455a3554bf96ebb25d8a9e1.html  dir_2feacc9793643faf2bbe69a39ab4e69d.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf_dep.map  dir_63772b626f2709090f0bdca0f40827b4.html  dir_6719ab1f1f7655efc2fa43f7eb574fd1.html  files.html  (+49 more)
headers/: cxxfoil.h  include.h  types.h  xfoilinterface.h
include/: CMakeLists.txt  util.h
src/: CMakeLists.txt  child_process.h  cxxfoil.cc  except.h  optional.h  spawn.h  types.cpp  xfoil_config.cc  xfoil_config.h  xfoil_runner.cc  xfoil_runner.h  xfoilinterface.cpp
tests/: CMakeLists.txt  gtest.cmake  test.cc  tests.cc  tests.cpp
tests/gtest/googlemock/: README.md
tests/gtest/googlemock/test/: gmock_test_utils.py
tests/gtest/googletest/: CMakeLists.txt
tests/gtest/googletest/test/: gtest_xml_output_unittest.py
(+81 files in other folders)
